# superpool-v3

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  codecov.yml  entrypoint.sh  pytest.ini  requirements.ini  requirements.txt
superpool/: .coveragerc  .markdownlint.json  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
superpool/api/: .env.local  Makefile  celery.py  celery_app.py  conftest.py  manage.py  mypy.ini  pyproject.toml  version.py
superpool/api/api/: exceptions.py  openapi.py  serializers.py  services.py  test_api.py  tests.py  urls.py  views.py
superpool/api/api/app_auth/: authentication.py  extensions.py  services.py  tests.py
superpool/api/api/applications/: serializers.py  views.py
superpool/api/api/catalog/: exceptions.py  filters.py  interfaces.py  openapi.py  permissions.py  providers.py  quote_service.py  serializers.py  services.py  urls.py  views.py
superpool/api/api/claims/: exceptions.py  openapi.py  serializers.py  services.py  urls.py  views.py
superpool/api/api/customers/: filters.py  serializers.py  services.py  urls.py  views.py
superpool/api/api/dashboard/: __init__.py  authentication.py
superpool/api/api/integrations/: base.py
superpool/api/api/merchants/: exceptions.py  serializers.py  services.py  urls.py  views.py
superpool/api/api/notifications/: base.py  channels.py  constants.py  services.py
superpool/api/api/support/: README.md
superpool/api/api/tests/: test_views.py
superpool/api/api/user/: serializers.py  urls.py  views.py
superpool/api/config/: urls.py
superpool/api/config/settings/: __init__.py  base.py  environment.py
superpool/api/core/: apps.py  emails.py  exceptions.py  mixins.py  models.py  permissions.py  registries.py  signals.py  utils.py
superpool/api/core/catalog/: admin.py  apps.py  models.py
superpool/api/core/claims/: admin.py  apps.py  models.py
superpool/api/core/merchants/: actions.py  admin.py  errors.py  models.py
superpool/api/core/middleware/: middleware.py
superpool/api/core/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_initial.py  0002_product_provider_coverage_product_provider.py  0003_policy_alter_product_options_and_more.py  0003_provider_products.py  0004_alter_coverage_options_coverage_benefits_and_more.py  0004_remove_product_provider_alter_coverage_product_id_and_more.py  0005_alter_user_role.py  0005_remove_coverage_product_coverage_currency.py  0006_coverage_coverage_type.py  0006_remove_application_api_token_remove_application_id_and_more.py  0007_add_temp_uuid_field.py  0007_alter_coverage_coverage_type.py  0007_remove_apikey_key_apikey_hashed_key_alter_apikey_id_and_more.py  0008_alter_apikey_id.py  0008_populate_temp_uuid_field.py  0008_provider_is_internal.py  0009_alter_apikey_merchant_and_more.py  0009_remove_provider_short_code_and_more.py  0009_switch_to_uuid_id.py  0010_alter_provider_options.py  0010_apikeyv2_client_id_alter_apikeyv2_environment_and_more.py  0011_alter_coverage_coverage_limit.py  0011_alter_user_role.py  0012_alter_user_first_name_alter_user_last_name.py  0012_rename_product_id_coverage_product.py  0013_customer_merchant.py  0013_remove_coverage_id_alter_coverage_coverage_id_and_more.py  0014_admin_customersupport.py  0014_alter_customer_dob_alter_customer_gender_and_more.py  0015_merge_20240815_1029.py  0016_admin_is_admin_admin_is_superuser_and_more.py  (+9 more)
superpool/api/middleware/: middleware.py
superpool/api/src/: settings.py
superpool/api/superpool/: asgi.py  settings.py  urls.py  wsgi.py
(+143 files in other folders)
